
New updates are grouped by person (committer/merger), at the top of the file.
All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.


2016-09-20 DariusIII
	Fix: Wrongly named autosize script in Alpha and Charisma themes (fixes issue #2268)
2016-09-20 niel
	Chg: Force php-yenc to use v1.2.2 or later, which fixes some issues with multi-part.
2016-09-16 niel
	Chg: Alter NzedbYenc adapter test to also check for version > 1.0.0 as that version is no longer
		compatible with the adapter's implementation.
	Mrg: PR 2266, from kevin123 - Refactor yydecode to use std I/O instead of files, improves
		performance.
2016-09-16 DariusIII
	Chg: Add back reporting of total rows to API response
	Chg: Group audio releases by album (fixes issue #2239)
2016-09-15 niel
	Chg: Updated NzedbYenc adapter to support decodeIgnore in the extension, instead of falling
		back to the Php adapter.
		 ***NOTE*** This changes the API for the function so all users of the extension will have to
		upgrade to at least v1.1.0, or the code will generate errors.
		  https://github.com/niel/php-yenc/releases
2016-09-14 DariusIII
	Chg: Add TinyMCE editor support to forum and admin->content
2016-09-12 niel
	Chg: Refactor scripts using nzedb\db\Settings class without actually using any of the class'
		additional features, to use the parent nzedb\db\DB class. This is to let me work on
		moving the scripts that DO need the additional features over to using app\models\Settings
		instead and properly separating business logic from the way models get used.
2016-09-08 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.6.4.1


2016-09-08 niel
	Add: Travis icons for Latest-testing and dev branches.
2016-09-08 kevin123
	Add: Travis build icon for stable branch on README.md
2016-09-07 niel