@@ -9,6 +9,8 @@ NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
 
+2016-09-23 DariusIII
+	Chg: Add support for per role category exclusions to admin->role edit page(Closes issue #1639)
 2016-09-20 DariusIII
 	Fix: Wrongly named autosize script in Alpha and Charisma themes (fixes issue #2268)
 2016-09-20 niel
